--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>ViralStream — Video Player</title>
+  <title> XXXXXXXXXXXX </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -54,7 +54,7 @@
     }
 
     .video-wrap{
-      width:100%;
+      width:92%;
       display:flex;
       justify-content:center;
       padding:12px;
@@ -69,13 +69,6 @@
       border:1px solid var(--border-color);
       outline:none;
       display:block;
-    }
-
-    .caption{
-      margin-top:12px;
-      font-size:.95rem;
-      color:var(--text-footer);
-      text-align:center;
     }
 
     footer{
@@ -108,18 +101,17 @@
 <script type="text/javascript" src="//www.highperformanceformat.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
   </header>
 
-  <main class="container" role="main">
+  <main class="container">
     <div class="video-wrap" aria-label="Video player">
       <video
         controls
         playsinline
-        preload="metadata"
+        muted
         controlslist="nodownload nofullscreen noremoteplayback"
         disablepictureinpicture>
         <source src="https://cdn.videy.co/XxTpttJB1.mp4" type="video/mp4" />
       </video>
     </div>
-
   </main>
 
   <footer>
