--- a/index.html
+++ b/index.html
@@ -89,29 +89,23 @@
 <body>
 
   <header>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'e3390cf0a8cdf953ded85bdaaf3046a5',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
+    <script type="text/javascript">
+    	atOptions = {
+    		'key' : 'e3390cf0a8cdf953ded85bdaaf3046a5',
+    		'format' : 'iframe',
+    		'height' : 250,
+    		'width' : 300,
+    		'params' : {}
+    	};
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
   </header>
 
   <main class="container">
     <div class="video-wrap" aria-label="Video player">
-      <video
-        controls
-        playsinline
-        muted
-        controlslist="nodownload nofullscreen noremoteplayback"
-        disablepictureinpicture>
-        <source src="https://cdn.videy.co/XxTpttJB1.mp4" type="video/mp4" />
-      </video>
-    </div>
+      <video controls playsinline muted controlslist="nodownload nofullscreen noremoteplayback" disablepictureinpicture>
+        <source src="https://cdn.videy.co/XxTpttJB1.mp4" type="video/mp4" /></video>
+	</div>
   </main>
 
   <footer>
