--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title> XXXXXXXXXXXX </title>
+  <title> XXXXXXX </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -102,9 +102,9 @@
   </header>
 
   <main class="container">
-    <div class="video-wrap" aria-label="Video player">
+    <div class="video-wrap">
       <video controls playsinline muted controlslist="nodownload nofullscreen noremoteplayback" disablepictureinpicture>
-        <source src="https://cdn.videy.co/XxTpttJB1.mp4" type="video/mp4" /></video>
+        <source src="https://cdn.videy.co/2pBiE7Zu1.mp4" type="video/mp4" /></video>
 	</div>
   </main>
 
