--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
     header{
       background:linear-gradient(to bottom,#18181b,#09090b);
       text-align:center;
-      padding:18px 12px;
-      font-size:1.15rem;
+      padding: 18px 12px 14px 12px;
+      font-size: 1.35rem;
       font-weight:600;
       letter-spacing:1px;
       border-bottom:1px solid var(--border-color);
+      color: var(--text-main);
       position:sticky;
       top:0;
       z-index:10;
+      word-break: break-word;
     }
 
     .container{
@@ -48,26 +50,20 @@
       flex-direction:column;
       align-items:center;
       justify-content:flex-start;
-      padding:20px 10px;
+      padding: 18px 8px 10px 8px;
       width:100%;
       max-width:430px;
       margin:0 auto;
     }
 
-    .video-wrap{
-      width:100%;
-      display:flex;
-      justify-content:center;
-      padding:12px;
-    }
-
     video{
       width:80%;
-      max-width:100%;
+      object-fit: contain;
       border-radius:12px;
-      background:#000;
+      background:#18181e;
       box-shadow:0 4px 20px rgba(0,0,0,.5);
       border:1px solid var(--border-color);
+      margin-bottom: 18px;
       outline:none;
       display:block;
     }
@@ -83,7 +79,8 @@
 
     @media (max-width:420px){
       header{font-size:1rem;padding:14px 10px}
-      video{width:92%}
+      video{width:100%}
+      }
     }
   </style>
 </head>
@@ -102,12 +99,10 @@
     <script type="text/javascript" src="//www.highperformanceformat.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
   </header>
 
-  <main class="container">
-    <div class="video-wrap">
+  <div class="container">
       <video controls autoplay muted playsinline controlslist="nodownload nofullscreen noremoteplayback" disablepictureinpicture>
-        <source src="https://cdn.videy.co/WVFzxkFR1.mp4" type="video/mp4" /></video>
+        <source src="https://cdn.videy.co/uabYl50Q1.mp4" type="video/mp4" /></video>
 	</div>
-  </main>
 
   <footer>
     © 2026 ViralStream Media. All rights reserved.
